# SlackBot

./: .gitignore  README.md
GO_BOT/: go.mod  go.sum  main.go
GO_BOT/SlackCommands/: outage.go
PYTHON_BOT/: Makefile  app.py  pyproject.toml  requirements.txt
PYTHON_BOT/general/: response.py
PYTHON_BOT/outage/: commands.py
